# paper-radio

./: .gitignore  AGENTS.md  README.md  idea.md  pyproject.toml
.claude/: settings.json
config/: trusted-orgs.json
data/memory/: vocab.json
data/papers/: arxiv-2605.10912.json  arxiv-2605.10912.md  arxiv-2605.10933.json  arxiv-2605.10933.md  arxiv-2605.10938.json  arxiv-2605.10938.md  arxiv-2605.12477.json  arxiv-2605.12477.md  arxiv-2605.12480.json  arxiv-2605.12480.md  arxiv-2605.12481.json  arxiv-2605.12481.md  (+68 more)
docs/: applied-domain-plan.md  idea.md  implementation-plan.md
jobs/: README.md  memory-updates.jsonl  reviews.jsonl  source-dossiers.jsonl  triage.jsonl
paper_radio/: __init__.py  agent_jobs.py  agent_runner.py  applied_domains.py  arxiv.py  candidates.py  cli.py  config.py  daily_run.py  episode_manifest.py  episode_planning.py  episode_runner.py  io.py  notebooklm_handoff.py  org_signals.py  output_validation.py  papers.py  paths.py  source_fetch.py  triage_planning.py  triage_promotion.py
schemas/: memory-update.schema.json  review-record.schema.json  source-dossier.schema.json  triage-record.schema.json
scripts/: run_episode
tests/: test_agent_jobs.py  test_agent_runner.py  test_applied_domains.py  test_arxiv.py  test_candidates.py  test_cli.py  test_config.py  test_daily_run.py  test_episode_manifest.py  test_episode_planning.py  test_episode_runner.py  test_memory.py  test_notebooklm_handoff.py  test_org_signals.py  test_papers.py  test_source_fetch.py  test_tooling_config.py  test_triage_planning.py  test_triage_promotion.py
(+173 files in other folders)
